ANTLR/littleDuckParser.py
# Generated from littleDuck.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class littleDuckParser ( Parser ):

    grammarFileName = "littleDuck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "','", "':'", "'{'", "'}'", "')'", 
                     "'='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'('", 
                     "'int'", "'float'", "'var'", "<INVALID>", "'else'", 
                     "'program'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT", "FLOAT", 
                      "VARS", "IF", "ELSE", "PROGRAM", "PRINT", "ID", "CTEI", 
                      "CTEF", "CTESTRING", "WS" ]

    RULE_program0 = 0
    RULE_program1 = 1
    RULE_end0 = 2
    RULE_tipo0 = 3
    RULE_vars0 = 4
    RULE_vars1 = 5
    RULE_vars2 = 6
    RULE_vars3 = 7
    RULE_bloque0 = 8
    RULE_bloque1 = 9
    RULE_estatuto0 = 10
    RULE_condicion0 = 11
    RULE_condicion1 = 12
    RULE_escritura0 = 13
    RULE_escritura1 = 14
    RULE_escritura2 = 15
    RULE_asignacion0 = 16
    RULE_expresion0 = 17
    RULE_exp0 = 18
    RULE_termino0 = 19
    RULE_factor0 = 20
    RULE_factor1 = 21
    RULE_varcte0 = 22

    ruleNames =  [ "program0", "program1", "end0", "tipo0", "vars0", "vars1", 
                   "vars2", "vars3", "bloque0", "bloque1", "estatuto0", 
                   "condicion0", "condicion1", "escritura0", "escritura1", 
                   "escritura2", "asignacion0", "expresion0", "exp0", "termino0", 
                   "factor0", "factor1", "varcte0" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    INT=15
    FLOAT=16
    VARS=17
    IF=18
    ELSE=19
    PROGRAM=20
    PRINT=21
    ID=22
    CTEI=23
    CTEF=24
    CTESTRING=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Program0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(littleDuckParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def program1(self):
            return self.getTypedRuleContext(littleDuckParser.Program1Context,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(littleDuckParser.WS)
            else:
                return self.getToken(littleDuckParser.WS, i)

        def getRuleIndex(self):
            return littleDuckParser.RULE_program0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram0" ):
                listener.enterProgram0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram0" ):
                listener.exitProgram0(self)




    def program0(self):

        localctx = littleDuckParser.Program0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program0)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==littleDuckParser.WS:
                self.state = 46
                self.match(littleDuckParser.WS)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(littleDuckParser.PROGRAM)
            self.state = 53
            self.match(littleDuckParser.ID)
            self.state = 54
            self.match(littleDuckParser.T__0)
            self.state = 55
            self.program1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars0(self):
            return self.getTypedRuleContext(littleDuckParser.Vars0Context,0)


        def bloque0(self):
            return self.getTypedRuleContext(littleDuckParser.Bloque0Context,0)


        def end0(self):
            return self.getTypedRuleContext(littleDuckParser.End0Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_program1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram1" ):
                listener.enterProgram1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram1" ):
                listener.exitProgram1(self)




    def program1(self):

        localctx = littleDuckParser.Program1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program1)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuckParser.VARS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.vars0()
                self.state = 58
                self.bloque0()
                self.state = 59
                self.end0()
                pass
            elif token in [littleDuckParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.bloque0()
                self.state = 62
                self.end0()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class End0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(littleDuckParser.EOF, 0)

        def getRuleIndex(self):
            return littleDuckParser.RULE_end0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnd0" ):
                listener.enterEnd0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnd0" ):
                listener.exitEnd0(self)




    def end0(self):

        localctx = littleDuckParser.End0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_end0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(littleDuckParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(littleDuckParser.INT, 0)

        def FLOAT(self):
            return self.getToken(littleDuckParser.FLOAT, 0)

        def getRuleIndex(self):
            return littleDuckParser.RULE_tipo0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo0" ):
                listener.enterTipo0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo0" ):
                listener.exitTipo0(self)




    def tipo0(self):

        localctx = littleDuckParser.Tipo0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tipo0)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            _la = self._input.LA(1)
            if not(_la==littleDuckParser.INT or _la==littleDuckParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARS(self):
            return self.getToken(littleDuckParser.VARS, 0)

        def vars1(self):
            return self.getTypedRuleContext(littleDuckParser.Vars1Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_vars0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars0" ):
                listener.enterVars0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars0" ):
                listener.exitVars0(self)




    def vars0(self):

        localctx = littleDuckParser.Vars0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vars0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(littleDuckParser.VARS)
            self.state = 71
            self.vars1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def vars1(self):
            return self.getTypedRuleContext(littleDuckParser.Vars1Context,0)


        def vars2(self):
            return self.getTypedRuleContext(littleDuckParser.Vars2Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_vars1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars1" ):
                listener.enterVars1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars1" ):
                listener.exitVars1(self)




    def vars1(self):

        localctx = littleDuckParser.Vars1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vars1)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(littleDuckParser.ID)
                self.state = 74
                self.match(littleDuckParser.T__1)
                self.state = 75
                self.vars1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(littleDuckParser.ID)
                self.state = 77
                self.match(littleDuckParser.T__2)
                self.state = 78
                self.vars2()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars3(self):
            return self.getTypedRuleContext(littleDuckParser.Vars3Context,0)


        def vars1(self):
            return self.getTypedRuleContext(littleDuckParser.Vars1Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_vars2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars2" ):
                listener.enterVars2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars2" ):
                listener.exitVars2(self)




    def vars2(self):

        localctx = littleDuckParser.Vars2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vars2)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.vars3()
                self.state = 82
                self.vars1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.vars3()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo0(self):
            return self.getTypedRuleContext(littleDuckParser.Tipo0Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_vars3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars3" ):
                listener.enterVars3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars3" ):
                listener.exitVars3(self)




    def vars3(self):

        localctx = littleDuckParser.Vars3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vars3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.tipo0()
            self.state = 88
            self.match(littleDuckParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bloque0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque1(self):
            return self.getTypedRuleContext(littleDuckParser.Bloque1Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_bloque0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque0" ):
                listener.enterBloque0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque0" ):
                listener.exitBloque0(self)




    def bloque0(self):

        localctx = littleDuckParser.Bloque0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bloque0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(littleDuckParser.T__3)
            self.state = 91
            self.bloque1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bloque1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto0(self):
            return self.getTypedRuleContext(littleDuckParser.Estatuto0Context,0)


        def bloque1(self):
            return self.getTypedRuleContext(littleDuckParser.Bloque1Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_bloque1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque1" ):
                listener.enterBloque1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque1" ):
                listener.exitBloque1(self)




    def bloque1(self):

        localctx = littleDuckParser.Bloque1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bloque1)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuckParser.IF, littleDuckParser.PRINT, littleDuckParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.estatuto0()
                self.state = 94
                self.bloque1()
                pass
            elif token in [littleDuckParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(littleDuckParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Estatuto0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicion0(self):
            return self.getTypedRuleContext(littleDuckParser.Condicion0Context,0)


        def escritura0(self):
            return self.getTypedRuleContext(littleDuckParser.Escritura0Context,0)


        def asignacion0(self):
            return self.getTypedRuleContext(littleDuckParser.Asignacion0Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_estatuto0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto0" ):
                listener.enterEstatuto0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto0" ):
                listener.exitEstatuto0(self)




    def estatuto0(self):

        localctx = littleDuckParser.Estatuto0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_estatuto0)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuckParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.condicion0()
                pass
            elif token in [littleDuckParser.PRINT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.escritura0()
                pass
            elif token in [littleDuckParser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.asignacion0()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condicion0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(littleDuckParser.IF, 0)

        def expresion0(self):
            return self.getTypedRuleContext(littleDuckParser.Expresion0Context,0)


        def bloque0(self):
            return self.getTypedRuleContext(littleDuckParser.Bloque0Context,0)


        def condicion1(self):
            return self.getTypedRuleContext(littleDuckParser.Condicion1Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_condicion0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion0" ):
                listener.enterCondicion0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion0" ):
                listener.exitCondicion0(self)




    def condicion0(self):

        localctx = littleDuckParser.Condicion0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condicion0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(littleDuckParser.IF)
            self.state = 105
            self.expresion0()
            self.state = 106
            self.match(littleDuckParser.T__5)
            self.state = 107
            self.bloque0()
            self.state = 108
            self.condicion1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condicion1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(littleDuckParser.ELSE, 0)

        def bloque0(self):
            return self.getTypedRuleContext(littleDuckParser.Bloque0Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_condicion1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion1" ):
                listener.enterCondicion1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion1" ):
                listener.exitCondicion1(self)




    def condicion1(self):

        localctx = littleDuckParser.Condicion1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_condicion1)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuckParser.ELSE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(littleDuckParser.ELSE)
                self.state = 111
                self.bloque0()
                self.state = 112
                self.match(littleDuckParser.T__0)
                pass
            elif token in [littleDuckParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(littleDuckParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Escritura0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(littleDuckParser.PRINT, 0)

        def escritura1(self):
            return self.getTypedRuleContext(littleDuckParser.Escritura1Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_escritura0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura0" ):
                listener.enterEscritura0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura0" ):
                listener.exitEscritura0(self)




    def escritura0(self):

        localctx = littleDuckParser.Escritura0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_escritura0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(littleDuckParser.PRINT)
            self.state = 118
            self.escritura1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Escritura1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CTESTRING(self):
            return self.getToken(littleDuckParser.CTESTRING, 0)

        def escritura2(self):
            return self.getTypedRuleContext(littleDuckParser.Escritura2Context,0)


        def expresion0(self):
            return self.getTypedRuleContext(littleDuckParser.Expresion0Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_escritura1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura1" ):
                listener.enterEscritura1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura1" ):
                listener.exitEscritura1(self)




    def escritura1(self):

        localctx = littleDuckParser.Escritura1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_escritura1)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuckParser.CTESTRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(littleDuckParser.CTESTRING)
                self.state = 121
                self.escritura2()
                pass
            elif token in [littleDuckParser.T__9, littleDuckParser.T__10, littleDuckParser.T__13, littleDuckParser.ID, littleDuckParser.CTEI, littleDuckParser.CTEF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.expresion0()
                self.state = 123
                self.escritura2()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Escritura2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def escritura1(self):
            return self.getTypedRuleContext(littleDuckParser.Escritura1Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_escritura2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura2" ):
                listener.enterEscritura2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura2" ):
                listener.exitEscritura2(self)




    def escritura2(self):

        localctx = littleDuckParser.Escritura2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_escritura2)
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [littleDuckParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(littleDuckParser.T__1)
                self.state = 128
                self.escritura1()
                pass
            elif token in [littleDuckParser.T__5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(littleDuckParser.T__5)
                self.state = 130
                self.match(littleDuckParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Asignacion0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def expresion0(self):
            return self.getTypedRuleContext(littleDuckParser.Expresion0Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_asignacion0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion0" ):
                listener.enterAsignacion0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion0" ):
                listener.exitAsignacion0(self)




    def asignacion0(self):

        localctx = littleDuckParser.Asignacion0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_asignacion0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(littleDuckParser.ID)
            self.state = 134
            self.match(littleDuckParser.T__6)
            self.state = 135
            self.expresion0()
            self.state = 136
            self.match(littleDuckParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expresion0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp0(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(littleDuckParser.Exp0Context)
            else:
                return self.getTypedRuleContext(littleDuckParser.Exp0Context,i)


        def getRuleIndex(self):
            return littleDuckParser.RULE_expresion0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion0" ):
                listener.enterExpresion0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion0" ):
                listener.exitExpresion0(self)




    def expresion0(self):

        localctx = littleDuckParser.Expresion0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_expresion0)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.exp0()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.exp0()
                self.state = 140
                self.match(littleDuckParser.T__7)
                self.state = 141
                self.exp0()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.exp0()
                self.state = 144
                self.match(littleDuckParser.T__8)
                self.state = 145
                self.exp0()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 147
                self.exp0()
                self.state = 148
                self.match(littleDuckParser.T__7)
                self.state = 149
                self.match(littleDuckParser.T__8)
                self.state = 150
                self.exp0()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino0(self):
            return self.getTypedRuleContext(littleDuckParser.Termino0Context,0)


        def exp0(self):
            return self.getTypedRuleContext(littleDuckParser.Exp0Context,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_exp0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp0" ):
                listener.enterExp0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp0" ):
                listener.exitExp0(self)




    def exp0(self):

        localctx = littleDuckParser.Exp0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_exp0)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.termino0()
                self.state = 155
                self.match(littleDuckParser.T__9)
                self.state = 156
                self.exp0()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.termino0()
                self.state = 159
                self.match(littleDuckParser.T__10)
                self.state = 160
                self.exp0()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 162
                self.termino0()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

